2005-09-26 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Clean up caching/timestamps.
	* SQLClient.m: ditto.

2005-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Rewrite caching, and expose cache for external use.
	* SQLClient.m: ditto.

2005-09-20 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: make SQLRecord modifieable (replace values).
	* SQLClient.m: ditto.

2005-09-15 Richard Frith-Macdonald  <rfm@gnu.org>

        * configure.ac: Locate postgres 8.0 on debian
	* configure: regenerate
		
2005-08-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Add SQLClient_LIBRARIES_DEPEND_UPON for apple as
	suggested by Yen-Ju Chen.
	* SQLClient.m: Don't call allocation debug functions on apple,
	and avoid bogus apple compiler warning.
	Guard against nil object passed to NSMapRemove() ... the apple
	implementation crashes on this.

2005-08-02 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Don't build WebServer stuff on MacOS-X when using the
	apple runtime (and presumably foundation).

2005-07-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* MySQL.m:
	* SQLClient.m:
	* WebServer.h:
	* WebServer.m:
	Tweaks to keep gcc-4 happy (signedness issues) and add support for
	using separate ssl conmfig for different IP addresses.

2005-06-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Expand tilde in paths searched for backend bundles.

2005-05-25 Richard Frith-Macdonald  <rfm@gnu.org>

	* Postgres.m: Clear connection if an exception occurs while
	disconnecting ... otherwise a failed disconnect can prevent
	any new connection from being established.
	Improve quoting of strings to be a bit more efficient and to
	remove nul characters.

2005-05-09 Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.[hm]: Add method to encode a form from a dictionary
	into a data object ... convenience for where form data is needed.

2005-03-02 Richard Frith-Macdonald  <rfm@gnu.org>
