@@ -1,3 +1,7 @@
+2005-09-28 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* SQLClient.m: boost performance of quoting a little.
+
 2005-09-26 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* SQLClient.h: Clean up caching/timestamps.
